# qzxing

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/BarcodeEncoder/: CMakeLists.txt  main.cpp  main.qml
examples/QMLBarcodeScanner/: CMakeLists.txt  qmlcamera.cpp
examples/QZXingDragNDropTest/: CMakeLists.txt
examples/QZXingLive/: CMakeLists.txt
src/: CMakeLists.txt
